2009-12-10  Christos Zoulas <christos@zoulas.com>

	* Setting the error flag of the mntfs for which the share
	  is already mounted results in the mount point not being
	  removed when it times out. (Amd considers it an error
	  mntfs and thus umount becomse a no-op.)
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Right now AMD sets all timeout values to their defaults
	  even if you explicitly set them to zero. This patch
	  introduces separate flags that store if the respective
	  values have been set and the code path setting default
	  values checks these flags instead of testing the values
	  for zero. [Linux only]
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Fix mntfs related lookup/(un)mount race conditions, by
	  introducing a new structure linking an mntfs to a node.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* We have to free the buffers allocated by the XDR routines when
	  decoding the mount response after copying them to their final place.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

2009-12-09  Christos Zoulas <christos@zoulas.com>

	* Free continuation in amfs_retry() if we don't call amfs_bgmount()
	  Normally it's amfs_bgmount() which frees the continuation. However, if
	  the mount is already in progress and we're in amfs_retry() for another
	  node we don't try mounting the filesystem once again. Still, we have
	  to free the continuation as we won't get called again and thus would
	  leak the continuation structure and our am_loc references.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Fix use-after-free and double free of mntfs private data
	  ops_nfs.c(nfs_init) does not clear private data pointer after free().
	  This leads to use-after-free and double free in case mount() fails.
	  (found by valgrind)
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

2009-11-23  Christos Zoulas <christos@zoulas.com>
